# pyodm

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yaml  pre-commit.yaml  release.yaml  test.yaml
src/lodestone/: __init__.py
src/odm/: __init__.py
src/optional_dependency_manager/: odm.py
src/pyodm/: __init__.py  odm.py
tests/: conftest.py  test_odm.py
