[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyodm"
authors = [
    {name = "Fangchen Li", email = "fangchen.li@outlook.com"}
]
description = "A Python optional dependency manager."
readme = "README.md"
keywords = ["dependency"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging" 
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "pandas==2.1.4",
    "numpy==1.26.4",
]

[tool.setuptools_scm]